# StaticTimingAnalysis

./: CMakeLists.txt  README.md  playground.cpp  sta.cpp  sta.h
benchmark/: ckt_comb.blif
